--- a/roles/kubed/tasks/main.yml
+++ b/roles/kubed/tasks/main.yml
@@ -2,5 +2,8 @@
 - name: Firewall k8s configs
   ansible.builtin.include_tasks: firewall.yml
 
+- name: Download k3s binary
+  ansible.builtin.include_tasks: download.yml
+
 - name: Sysctl k8s configs
   ansible.builtin.include_tasks: sysctl.yml
