--- a/roles/kubed_head/tasks/main.yml
+++ b/roles/kubed_head/tasks/main.yml
@@ -12,11 +12,6 @@
 #   args:
 #     creates: /etc/rancher/k3s/k3s.yaml
 
-# - name: Replace IP address
-#   ansible.builtin.replace:
-#     path: /etc/rancher/k3s/k3s.yaml
-#     regexp: '127\.0\.0\.1:6443'
-#     replace: "{{ ansible_host }}:6443"
 
 # - name: Get node token
 #   ansible.builtin.command: cat /var/lib/rancher/k3s/server/node-token
@@ -34,20 +29,20 @@
 #   ansible.builtin.command: kubectl label nodes homelab-thinkcentre head=true
 
 - name: Copy K3s service file
-  ansible.builtin.register: k3s_service
-  template:
+  register: k3s_service
+  ansible.builtin.template:
     src: "k3s.service.j2"
     dest: "{{ systemd_dir }}/k3s.service"
     owner: root
     group: root
-    mode: 0644
+    mode: '0644'
 
 - name: Enable and check K3s service
   ansible.builtin.systemd:
     name: k3s
-    daemon_reload: yes
+    daemon_reload: true
     state: restarted
-    enabled: yes
+    enabled: true
 
 - name: Wait for node-token
   ansible.builtin.wait_for:
@@ -68,9 +63,16 @@
     path: "{{ k3s_server_location }}/server/node-token"
   register: node_token
 
-- name: Store Master node-token
+# - name: Store Master node-token
+#   ansible.builtin.set_fact:
+#     token: "{{ node_token.content | b64decode | regex_replace('\n', '') }}"
+
+- name: Set join token
   ansible.builtin.set_fact:
-    token: "{{ node_token.content | b64decode | regex_replace('\n', '') }}"
+    join_token: "{{ node_token.content }}"
+  delegate_to: "{{ item }}"
+  delegate_facts: true
+  with_items: "{{ groups['all'] }}"
 
 - name: Restore node-token file access
   ansible.builtin.file:
@@ -84,20 +86,19 @@
     owner: "{{ ansible_user }}"
     mode: "u=rwx,g=rx,o="
 
+- name: Replace IP address
+  ansible.builtin.replace:
+    path: /etc/rancher/k3s/k3s.yaml
+    regexp: '127\.0\.0\.1:6443'
+    replace: "{{ ansible_host }}:6443"
+
 - name: Copy config file to user home directory
   ansible.builtin.copy:
     src: /etc/rancher/k3s/k3s.yaml
     dest: ~{{ ansible_user }}/.kube/config
-    remote_src: yes
+    remote_src: true
     owner: "{{ ansible_user }}"
     mode: "u=rw,g=,o="
-
-- name: Replace https://localhost:6443 by https://master-ip:6443
-  ansible.builtin.command: >-
-    k3s kubectl config set-cluster default
-      --server=https://{{ master_ip }}:6443
-      --kubeconfig ~{{ ansible_user }}/.kube/config
-  changed_when: true
 
 - name: Create kubectl symlink
   ansible.builtin.file:
