--- a/setup-lab.yml
+++ b/setup-lab.yml
@@ -10,13 +10,13 @@
     - hardened
     - kubed
 
-# - hosts: homelab-mainarray
-#   name: Setup zfs on storage array
-#   become: true
-#   vars_files:
-#     - zfs.yml
-#   roles:
-#     - storage_array
+- hosts: homelab-mainarray
+  name: Setup zfs on storage array
+  become: true
+  vars_files:
+    - zfs.yml
+  roles:
+    - storage_array
 
 - hosts: homelab-thinkcentre
   name: Setup kubernetes cluster head
