--- a/vars/k3s.yml
+++ b/vars/k3s.yml
@@ -2,7 +2,7 @@
 k3s_version: v1.22.3+k3s1
 ansible_user: vagrant
 systemd_dir: /etc/systemd/system
-master_ip: 192.168.56.68
-extra_server_args: ""
-extra_agent_args: ""
+master_ip: 192.168.1.68
+extra_server_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
+extra_agent_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
 k3s_server_location: /var/lib/rancher/k3s
