--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 jobs:
-  code-quality:
-    name: Check code quality
-    uses: ./.gitea/workflows/code-quality.yaml 
+  # code-quality:
+  #   name: Check code quality
+  #   uses: ./.gitea/workflows/code-quality.yaml 
 
   
   dry-run:
     name: Perform dry run
-    needs: code-quality
+    # needs: code-quality
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
@@ -32,7 +32,7 @@ jobs:
         run: |
           mkdir ~/.vagrant.d/
           echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
-          chmod 0644 ~/.vagrant.d/insecure_private_key
+          chmod 0600 ~/.vagrant.d/insecure_private_key
           ansible-playbook -i inv/dev --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
