--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -32,7 +32,8 @@ jobs:
         run: |
           mkdir ~/.vagrant.d/
           echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
-          chmod 0600 ~/.vagrant.d/insecure_private_key
-          ansible-playbook -i inv/dev --check setup-lab.yml
+          echo $(cat ~/.vagrant.d/insecure_private_key)
+          # chmod 0600 ~/.vagrant.d/insecure_private_key
+          # ansible-playbook -i inv/dev --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
