--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -30,9 +30,10 @@ jobs:
 
       - name: Copy vagrant ssh key
         run: |
-          mkdir ~/.vagrant.d/
-          echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
-          chmod 0600 ~/.vagrant.d/insecure_private_key
-          ansible-playbook -i inv/dev --check setup-lab.yml
+          ping -c 5 192.168.1.68
+          # mkdir ~/.vagrant.d/
+          # echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
+          # chmod 0600 ~/.vagrant.d/insecure_private_key
+          # ansible-playbook -i inv/dev --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
