--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Copy vagrant ssh key
         run: |
+          apt install iputils-ping --assume-yes
           ping -c 5 192.168.1.68
           # mkdir ~/.vagrant.d/
           # echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
