Trying to figure out why connectivity not working

--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -30,11 +30,9 @@ jobs:
 
       - name: Copy vagrant ssh key
         run: |
-          apt install iputils-ping --assume-yes
-          ping -c 5 192.168.1.68
-          # mkdir ~/.vagrant.d/
-          # echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
-          # chmod 0600 ~/.vagrant.d/insecure_private_key
-          # ansible-playbook -i inv/dev --check setup-lab.yml
+          mkdir ~/.vagrant.d/
+          echo $ANSIBLE_KEY > ~/.vagrant.d/insecure_private_key
+          chmod 0600 ~/.vagrant.d/insecure_private_key
+          ansible-playbook -v -i inv/dev --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
