--- a/inv/dev/group_vars/all.yml
+++ b/inv/dev/group_vars/all.yml
@@ -3,7 +3,7 @@
 ###########
 
 ansible_user: vagrant
-ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
+# ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
 
 #######
 # ZFS #
