--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
 
           eval $(ssh-agent -s)
           echo "${ANSIBLE_KEY}" | ssh-add -
-          ansible-playbook -v -i inv/dev --check setup-lab.yml
+          ansible-playbook -i inv/dev --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
