--- a/roles/kubed_head/tasks/main.yml
+++ b/roles/kubed_head/tasks/main.yml
@@ -88,4 +88,4 @@
 
 - name: Label head
   ansible.builtin.command:
-    cmd: kubectl label nodes homelab-thinkcentre head=true --overwrite
+    cmd: kubectl label nodes homelab-mainarray head=true --overwrite
