--- a/setup-lab.yml
+++ b/setup-lab.yml
@@ -18,11 +18,10 @@
   roles:
     - storage_array
 
-- name: Setup main array as head and node
+- name: Setup main array as head
   hosts: homelab-mainarray
   become: true
   vars_files:
     - ./vars/k3s.yml
   roles:
     - kubed_head
-    - kubed_node
