--- a/inv/prod/group_vars/all.yml
+++ b/inv/prod/group_vars/all.yml
@@ -1,3 +1,9 @@
+###########
+# Ansible #
+###########
+
+ansible_user: kwkaiser
+
 #######
 # ZFS #
 #######
@@ -31,4 +37,4 @@ extra_agent_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net
 # Secrets #
 ###########
 
-foo: "{{ lookup('env', 'SUPER_SECRET') }}"
+ansible_become_pass: "{{ lookup('env', 'SUDO_PASSWORD') }}"
