--- a/inv/prod/group_vars/all.yml
+++ b/inv/prod/group_vars/all.yml
@@ -30,8 +30,8 @@ zfs_pools:
 #######
 
 master_ip: 192.168.2.103
-extra_server_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
-extra_agent_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
+extra_server_args: "--kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
+extra_agent_args: "--kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
 
 ###########
 # Secrets #
