Drives, allow long SSH connection

--- a/inv/prod/group_vars/all.yml
+++ b/inv/prod/group_vars/all.yml
@@ -20,9 +20,9 @@ zfs_pools:
     devices:
       - /dev/sda
       - /dev/sdb
-      - /dev/sdc
       - /dev/sdd
-    type: raidz3
+      - /dev/sdf
+    type: raidz2
     state: present
 
 #######
