--- a/inv/dev/group_vars/all.yml
+++ b/inv/dev/group_vars/all.yml
@@ -26,8 +26,8 @@ zfs_pools:
 #######
 
 master_ip: 192.168.1.68
-extra_server_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
-extra_agent_args: "--flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
+extra_server_args: "--no-deploy traefik --flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
+extra_agent_args: "--no-deploy traefik --flannel-iface=eth1 --kubelet-arg=allowed-unsafe-sysctls=net.ipv6.conf.all.forwarding,net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
 
 ###########
 # Secrets #
