--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           eval $(ssh-agent -s)
           echo "${ANSIBLE_KEY}" | ssh-add -
-          ansible-playbook -i inv/dev setup-lab.yml
+          ansible-playbook -i inv/prod setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
