--- a/.gitea/workflows/pr.yml
+++ b/.gitea/workflows/pr.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           eval $(ssh-agent -s)
           echo "${ANSIBLE_KEY}" | ssh-add -
-          ansible-playbook -i inv/dev --check setup-lab.yml
+          ansible-playbook -i inv/prod --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
