--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -30,10 +30,12 @@ jobs:
 
       - name: Run playbook
         run: |
-          eval $(ssh-agent -s)
-          echo "$ANSIBLE_KEY" | ssh-add -
-          echo $(ssh-add -l)
-          ansible -i inv/prod mainarray -m shell -a "echo 'testing echo'"
+          echo 'foo'
+          echo $ANSIBLE_KEY
+          # eval $(ssh-agent -s)
+          # echo "$ANSIBLE_KEY" | ssh-add -
+          # echo $(ssh-add -l)
+          # ansible -i inv/prod mainarray -m shell -a "echo 'testing echo'"
           # ansible-playbook -i inv/prod --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
