--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -31,9 +31,8 @@ jobs:
       - name: Run playbook
         run: |
           echo 'foo'
-          echo $ANSIBLE_KEY
-          # eval $(ssh-agent -s)
-          # echo "$ANSIBLE_KEY" | ssh-add -
+          eval $(ssh-agent -s)
+          echo "$ANSIBLE_KEY" | ssh-add -
           # echo $(ssh-add -l)
           # ansible -i inv/prod mainarray -m shell -a "echo 'testing echo'"
           # ansible-playbook -i inv/prod --check setup-lab.yml
