--- a/.gitea/workflows/pr.yml
+++ b/.gitea/workflows/pr.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Run dry run of playbook
         run: |
           eval $(ssh-agent -s)
-          echo "${ANSIBLE_KEY}" | ssh-add -
-          echo $(ssh-add -l)
-          ansible -i inv/prod mainarray -m shell -a "echo 'testing echo'"
-          # ansible-playbook -i inv/prod --check setup-lab.yml
+          echo "$ANSIBLE_KEY" | ssh-add -
+          ansible-playbook -i inv/prod --check setup-lab.yml
         env:
           ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
+          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
