--- a/inv/dev/group_vars/all.yml
+++ b/inv/dev/group_vars/all.yml
@@ -1,3 +1,11 @@
+###########
+# Ansible #
+###########
+
+ansible_user: vagrant
+ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
+
+
 #######
 # ZFS #
 #######
