--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -7,9 +7,23 @@ on:
 
 jobs:
   code-quality:
-    name: Check code quality
-    uses: ./.gitea/workflows/code-quality.yaml 
+    name: Code quality
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
+      - name: Install ansible
+        run: |
+          apt update
+          apt install ansible --assume-yes
+          apt install ansible-lint --assume-yes
+
+      - name: Install ansible galaxy deps
+        run: make install
+
+      - name: Lint
+        run: ansible-lint
   
   deploy:
     name: Perform dry run
