--- a/.gitea/workflows/pr.yml
+++ b/.gitea/workflows/pr.yml
@@ -7,16 +7,13 @@ on:
 
 jobs:
   code-quality:
-    name: Check code quality
-    uses: ./.gitea/workflows/code-quality.yaml
-
-  dry-run:
-    name: Perform dry run
-    needs: code-quality
+    name: Code quality
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+            ref: ${{ github.event.pull_request.head.sha }}      
 
       - name: Install ansible
         run: |
@@ -24,14 +21,8 @@ jobs:
           apt install ansible --assume-yes
           apt install ansible-lint --assume-yes
 
-      - name: Install galaxy deps
-        run: make install 
+      - name: Install ansible galaxy deps
+        run: make install
 
-      - name: Run dry run of playbook
-        run: |
-          eval $(ssh-agent -s)
-          echo "$ANSIBLE_KEY" | ssh-add -
-          ansible-playbook -i inv/prod --check setup-lab.yml
-        env:
-          ANSIBLE_KEY: ${{ secrets.ANSIBLE_KEY }}
-          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+      - name: Lint
+        run: ansible-lint
