--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -19,14 +19,17 @@ jobs:
           apt install ansible --assume-yes
           apt install ansible-lint --assume-yes
 
+      - name: Install taskfile
+        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
+
       - name: Install ansible galaxy deps
-        run: make install
+        run: ./bin/task install
 
       - name: Lint
-        run: ansible-lint
+        run: ./bin/task lint
   
   deploy:
-    name: Perform dry run
+    name: Deploy
     needs: code-quality
     runs-on: ubuntu-latest
     steps: 
@@ -37,10 +40,12 @@ jobs:
         run: |
           apt update
           apt install ansible --assume-yes
-          apt install ansible-lint --assume-yes
+
+      - name: Install taskfile
+        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
 
       - name: Install galaxy deps
-        run: make install 
+        run: ./bin/task install
 
       - name: Run playbook
         run: |
