--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install taskfile
         run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
 
+      - name: foo
+        run: installed_roles=$(ansible-galaxy role list 2>/dev/null)
+
       - name: Install ansible galaxy deps
         run: ./bin/task install
 
