--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
 
       - name: foo
-        run: ansible-galaxy role list 2>/dev/null
+        run: ansible-galaxy role list 
 
       - name: Install ansible galaxy deps
         run: ./bin/task install
