Update cache on entrypoint, increase size of dev container

--- a/roles/comfy/tasks/main.yml
+++ b/roles/comfy/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Install cli utils
   ansible.builtin.package:
     state: present
+    update_cache: yes
     name:
       - htop
       - fzf
